--- a/hello-world.html
+++ b/hello-world.html
@@ -32,7 +32,7 @@
 
 
 		p {
-			color: #A184FA;
+			color: turquoise;
 			font-family: "Source Code Pro", Menlo, Monaco, fixed-width;
 		}
 	</style>
@@ -42,6 +42,6 @@
 	<h2>Hello World</h2>
 	<h3>Hello World</h3>
 	<h4>Hello World</h4>
-	<p>Evan is pushing this file to branch.</p>
+	<p>Now Taylor is the one who does the pushing.</p>
 </body>
 </html>
