--- a/hello-world.html
+++ b/hello-world.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
 	<title>"Salutations!"</title>
+	<link rel="stylesheet" href="css/master.css">
+	<link rel="stylesheet" href="css/HomeImg.css">
+	<!-- Adam was hungry so he added in a website he made that has a lot of food on it -->
 	<style>
 		body {
 			background-color: #2D2D2D;
@@ -43,5 +46,14 @@
 	<h3>Hello World</h3>
 	<h4>Hello World</h4>
 	<p>Now Taylor is the one who does the pushing.</p>
+	<nav>
+		<ul>
+			<li><a href="Home.html">Home</a></li>
+			<li><a href="Menu.html">Menu</a></li>
+			<li><a href="Catering.html">Catering</a></li>
+			<li><a href="Specials.html">Specials</a></li>
+			<li><a href="Feedback.html">Feedback</a></li>
+		<!--  <li><a href="Carears.html">Carears</a></li> -->
+		</ul>
 </body>
 </html>
